[gd_scene load_steps=10 format=2]

[ext_resource path="res://Client/Scenes/Terminal/TerminalWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Client/NetworkClient.gd" type="Script" id=2]
[ext_resource path="res://Client/Scenes/Login/Login.tscn" type="PackedScene" id=3]
[ext_resource path="res://Client/Scenes/Connecting/Connecting.tscn" type="PackedScene" id=4]
[ext_resource path="res://Client/ClientPackager.gd" type="Script" id=5]
[ext_resource path="res://Client/Scenes/Info/Info.tscn" type="PackedScene" id=7]
[ext_resource path="res://Client/Scenes/Notifications/Messages.tscn" type="PackedScene" id=8]
[ext_resource path="res://Client/Scenes/Menu/Menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Client/Scenes/Notifications/Popup.tscn" type="PackedScene" id=10]

[node name="ClientMaster" type="Control"]

[node name="NetworkClient" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ClientPackager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Login" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Connecting" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Menu" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Messages" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Info" parent="." instance=ExtResource( 7 )]
visible = false

[node name="TerminalWindow" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MessagePopup" parent="." instance=ExtResource( 10 )]
margin_left = 21.0
margin_top = 346.0
margin_right = 191.0
margin_bottom = 466.0

[connection signal="connected" from="NetworkClient" to="Connecting" method="_on_stop_connecting"]
[connection signal="connected" from="NetworkClient" to="Menu" method="enter"]
[connection signal="failed_to_connect" from="NetworkClient" to="Login" method="enter"]
[connection signal="failed_to_connect" from="NetworkClient" to="Connecting" method="_on_stop_connecting"]
[connection signal="packet_received" from="NetworkClient" to="ClientPackager" method="_on_receive_packet"]
[connection signal="trying_to_connect" from="NetworkClient" to="Connecting" method="_on_trying_to_connect"]
[connection signal="ended" from="ClientPackager" to="Menu" method="_on_ended"]
[connection signal="new_message" from="ClientPackager" to="Messages" method="_on_new_message"]
[connection signal="new_message" from="ClientPackager" to="MessagePopup" method="open_message"]
[connection signal="packet_sent" from="ClientPackager" to="NetworkClient" method="send"]
[connection signal="refresh" from="ClientPackager" to="Menu" method="refresh"]
[connection signal="refresh" from="ClientPackager" to="Messages" method="refresh"]
[connection signal="refresh" from="ClientPackager" to="TerminalWindow" method="refresh"]
[connection signal="started" from="ClientPackager" to="Menu" method="_on_started"]
[connection signal="welcome" from="ClientPackager" to="Menu" method="initialize"]
[connection signal="welcome" from="ClientPackager" to="Messages" method="initialize"]
[connection signal="welcome" from="ClientPackager" to="Info" method="initialize"]
[connection signal="welcome" from="ClientPackager" to="TerminalWindow" method="initialize"]
[connection signal="password_submitted" from="Login" to="NetworkClient" method="try_connect"]
[connection signal="connecting_canceled" from="Connecting" to="Login" method="enter"]
[connection signal="opened_info" from="Menu" to="Info" method="enter"]
[connection signal="opened_messages" from="Menu" to="Messages" method="enter"]
[connection signal="opened_terminal" from="Menu" to="TerminalWindow" method="_on_open_terminal"]
[connection signal="used_backdoor" from="Menu" to="ClientPackager" method="_on_send_backdoor_packet"]
[connection signal="used_crack" from="Menu" to="ClientPackager" method="_on_send_crack_packet"]
[connection signal="used_hack" from="Menu" to="ClientPackager" method="_on_send_hack_packet"]
[connection signal="used_protect" from="Menu" to="ClientPackager" method="_on_send_protect_packet"]
[connection signal="used_sabotage" from="Menu" to="ClientPackager" method="_on_send_sabotage_packet"]
[connection signal="used_scan" from="Menu" to="ClientPackager" method="_on_send_scan_packet"]
[connection signal="exited_messages" from="Messages" to="Menu" method="enter"]
[connection signal="exited_info" from="Info" to="Menu" method="enter"]
[connection signal="password_submitted" from="TerminalWindow" to="Menu" method="_on_chosen_terminal"]
[connection signal="quitted" from="TerminalWindow" to="Menu" method="enter"]
